# fwd-funda-study

./: .gitignore  01-data-ingestion.ipynb  README.md  ff-study-01-ingestion.ipynb  ff-study-02-analysis.ipynb  forward-fundamentals-study-backup.ipynb  forward-fundamentals-study.ipynb  main.py  notebook.ipynb  pyproject.toml
