[project]
name = "forward-fundamentals-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "edgartools>=5.42.0",
    "fredapi>=0.5.2",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.6.1",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.68.4",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
